Side bar menu done

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,7 +4,29 @@
     "dcuSettings" : "Концентратор",
     "meterSettings" : "Тоолуур тохиргоо",
     "areaSettings" : "Байршил тохиргоо",
+    "F25" : "Цахилгаан параметрүүд",
+    "F177" : "Нийт идэвхтэй энерги",
+    "F129" : "Эерэг идэвхтэй энерги",
+    "F130" : "Эерэг хуурмаг энерги",
+    "F131" : "Сөрөг идэвхтэй энерги",
+    "F132" : "Сөрөг хуурмаг энерги",
+    "time" : "Тоолуурын огноо",
+    "controlMeter": "Тоолуур удирдах",
+    "control": "Тоолуур асаах/унтраах",
+    "coverEvent": "Тагны тохиргоо",
+    "tariffChange": "Тариф тохиргоо",
+    "loadProfile": "Түүхэн мэдээлэл",
+    "energy": "Энерги",
+    "current": "Гүйдэл",
+    "voltage": "Хүчдэл",
+    "peakLoad": "Оргил ачаалал",
+    "voltageDrop": "Хүчдэлийн уналт",
     "title": "ТАМАДУМ | ЦЭС",
+    "history": "Тайлан",
+    "balance": "Баланс",
+    "balanceSettings": "Балансын тохиргоо",
+    "balanceView": "Баланс гаргах",
+
     "shortTitle": "ТМДМ",
     "dashboard": "ХЯНАХ САМБАР",
     "pages": "Pages",
@@ -15,7 +37,7 @@
     "register": "Register",
     "lock": "Lock Screen",
     "userProfile": "User Profile",
-    "components": "Components",
+    "instantaneousData": "Агшин зуурын мэдээлэл",
     "multiLevelCollapse": "Multilevel Collapse",
     "example": "Example Page",
     "buttons": "Buttons",
